# treinamento_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.cpp
src/: CMakeLists.txt  Calculo.cpp  Calculo.h
tests/: CMakeLists.txt  TestCalculo.cpp
